# bugchess

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  SESSION_LOG.md  SOUL.md  build.sh  claude.sh  create-gifs.js  create-gifs.sh  deployment.txt  dev.sh  docker-compose.yml  notes.txt  pi.sh
.agents/: AGENTS-collaborator.agent.md  AGENTS-minion.agent.md
.agents/skills/bugchess-playwright-screencasts/: SKILL.md
.agents/skills/bugchess-playwright-screenshots/: SKILL.md
.agents/skills/docker-compose-editing/: SKILL.md
.agents/skills/game-canvas-presentation/: SKILL.md
.agents/skills/game-mechanics/: SKILL.md
.agents/skills/markdown-editing/: SKILL.md
.claude/: settings.local.json
.github/workflows/: game-infrastructure.yml  game-wasm.yml  rust.yml
.pi/: settings.json
.pi/extensions/: temperature.ts
automation/: create-gifs.js  create-gifs.sh
automation/playwright/: capture-basic-piece-png.js  capture-castle-gif.js  capture-cross-gif.js  capture-horizontal-bar-cropped.js  capture-horizontal-bar-gif.js  capture-pieces-auto.js  capture-pieces.js  capture-queen-gif.js  capture-sniper-gif.js  capture-vertical-bar-gif.js  menu-layout-check.js  package-lock.json  package.json  start-game.js  webrtc-probe.js
docker/: docker-compose.yml  init-letsencrypt.sh  nginx-sites-available-default  turnserver.conf
docker/nginx/: default.conf
game-core/: Cargo.toml
game-core/src/: board_event_consumer.rs  command_handler.rs  core_game.rs  event_broker.rs  fakebox.rs  game_controller.rs  game_events.rs  lib.rs  multiplayer_connector.rs
game-core/tests/: snapshots.rs
game-core/tests/exported_games/: 0001_exported_game.json  0004_function not implemented on non-wasm32 targets.json  0006_Horizontal bar merge and blast.json  0007_Cross merge and capture.json
game-core/tests/snapshots/: snapshots__0005_Cannot undo next turn.snap  snapshots__0006_Horizontal bar merge and blast.snap  snapshots__0007_Cross merge and capture.snap
game-events/: Cargo.toml
game-events/src/: atomic_events.rs  board_event_consumer.rs  core_game.rs  event_broker.rs  game_controller.rs  game_events.rs  game_history.rs  lib.rs  undo_manager.rs
game-events/src/actions/: attack.rs  compound_events.rs  finish_turn.rs  merge.rs  mod.rs  moving.rs  place.rs  undo.rs
game-logic/: Cargo.toml
game-logic/src/: board.rs  game.rs  piece.rs  ranges.rs
game-main/: Cargo.toml
game-main/resources/docker/nakama/: docker-compose.yml
game-main/src/: constants.rs  custom_client.rs  fakebox.rs  main.rs  matchbox.rs  multiplayer_connector.rs  nakama.rs  test_utils.rs
game-main/src/events/: atomic_events.rs  board_event_consumer.rs  event_broker.rs  game_events.rs
game-main/src/events/actions/: attack.rs  compound_events.rs  finish_turn.rs  merge.rs  moving.rs  place.rs  undo.rs
game-main/src/game_logic/: board.rs  mod.rs  ranges.rs
game-main/src/rendering/: animation.rs  render_events.rs  rendering.rs
game-main/src/states/: core_game_state.rs  error_state.rs  loading.rs  mod.rs  states.rs
game-main/tests/: basic.rs  snapshots.rs  test_utils.rs
game-main/tests/exported_games/: 0002_Error on Purpose.json  0003_Undo before making a move.json  0005_Cannot undo next turn.json
game-main/tests/snapshots/: exported_game.json  exported_game4.938254117965698.txt  snapshots__0001_exported_game.snap  snapshots__0004_function not implemented on non-wasm32 targets.snap  snapshots__0005_Cannot undo next turn.snap.new  snapshots__snapshot.snap
game-main/tests/utils/: fakebox.rs  mod.rs  test_utils.rs
game-model/: Cargo.toml
game-model/src/: board.rs  game.rs  lib.rs  pattern.rs  piece.rs  ranges.rs
game-render/: Cargo.toml
game-render/src/: animation.rs  constants.rs  layout.rs  lib.rs  render_events.rs  rendering.rs  sprite.rs  ui.rs
game-server/: Cargo.toml  Dockerfile
game-server/src/: main.rs
html/: .gitignore  gl.js  index.htm  index.html
html/gifs/: README.md
resources/: display_config.ron
resources/docker/nakama/data/: config.yml
resources/prefabs/: ui.ron
resources/sprites/: logo.ron  piece.ron  pieces.ron  special.ron
sandbox/: Dockerfile  entrypoint.sh  run.sh
skills/: docker-compose-editing.skill.md
src/: board.rs  conf.rs  constants.rs  game.rs  game_events.rs  gui.rs  main.rs  matchbox.rs  nakama.rs  piece.rs  ranges.rs  rendering.rs  states.rs  ui.rs
src/components/: active.rs  board.rs  bounded.rs  mod.rs  mouse.rs  piece.rs
src/events/: atomic_events.rs  board_event_consumer.rs  compound_events.rs  event_broker.rs  game_events.rs  mod.rs
src/events/actions/: attack.rs  compound_events.rs  finish_turn.rs  merge.rs  mod.rs  place.rs
src/game_logic/: board.rs  game.rs  mod.rs  piece.rs  ranges.rs
src/rendering/: animation.rs  mod.rs  render_events.rs  rendering.rs  ui.rs
src/resources/: board.rs
src/states/: core_game_state.rs  game_over.rs  load.rs  loading.rs  mod.rs  next_turn.rs  piecemovement.rs  pieceplacement.rs  states.rs  target_for_power.rs
src/systems/: active.rs  board.rs  dying.rs  mod.rs  mousehandler.rs  move_to_position.rs  piece_movement_indicator.rs  power_animation.rs  target_highlighter.rs  ui_event_handling.rs
src/systems/actions/: actions.rs  common.rs  during_turn.rs  exhaust.rs  mod.rs  moving.rs  next_turn.rs  place.rs  remove.rs
