[package]
name = "game-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-model = { path = "../game-model" }
game-events = { path = "../game-events" }
log = "0.4"
indexmap = "2.13.0"
nanoserde = "0.2.1"
quad-rand = "0.2.3"
