[package]
name = "game-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-model = {path = "../game-model"}
nanoserde = "0.1.37"
miniquad = "0.3.16" # only used for logging
quad-rand = "0.2.1"
derive-getters = "0.2.1"
