[package]
name = "bugchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0"
env_logger = "0.11.5"
log = "0.4"

macroquad = "0.3.26"
egui-macroquad = "0.15.0"
macroquad-canvas = "0.3.2"
urlencoding = "2.1.3"
# nakama-rs = "*"
url = "2.5.2"
# matchbox_socket = { path = "../../matchbox/matchbox_socket" }
# matchbox_socket = { git = "https://github.com/johanhelsing/matchbox" }
# matchbox_socket = { git = "https://github.com/heartlabs/matchbox", branch = "feature/reliable-channel2"}
matchbox_socket = "0.6.1"
async-executor = "1.13.0"
nanoserde = "0.1.37"
futures = "0.3.30"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
uuid = { version = "1.10.0", features = ["v4"] }
# tokio-tungstenite = "0.17.2"
async-trait = "0.1.81"
futures-util = "0.3.30"
json_comments = "0.2.2"
reqwest = { version = "0.11", features = ["blocking"] }

game-model = { path = "../game-model" }
game-events = { path = "../game-events" }
game-render = { path = "../game-render" }
game-core = { path = "../game-core" }

[dev-dependencies]
anyhow = "1.0.86"
insta = "1.39.0"

[target.'cfg(target_family = "wasm")'.dependencies]
sapp-jsutils = "0.1.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.*", features = ["Document"] }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
opt-level = 's'
