[package]
name = "bugchess"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

console_log = "1.0"
env_logger = "0.11.9"
log = "0.4"

macroquad = "0.4.14"
egui-macroquad = "0.17.3"
macroquad-canvas = "0.4.1"
urlencoding = "2.1.3"
url = "2.5.8"
matchbox_socket = "0.14.0"
async-executor = "1.14.0"
nanoserde = "0.2.1"
futures = "0.3.32"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
uuid = { version = "1.21.0", features = ["v4", "js"] }
async-trait = "0.1.89"
futures-util = "0.3.32"
reqwest = { version = "0.11", features = ["blocking"] }

game-model = { path = "../game-model" }
game-events = { path = "../game-events" }
game-render = { path = "../game-render" }
game-core = { path = "../game-core" }

[target.'cfg(target_family = "wasm")'.dependencies]
sapp-jsutils = "0.1.7"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["Document"] }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
