[package]
name = "game-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
macroquad-canvas = "0.3.0"
instant = "0.1.12"
game-model = {path = "../game-model"}
game-events = {path = "../game-events"}