[package]
name = "game-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
macroquad-canvas = "0.3.2"
instant = "0.1.13"
game-model = {path = "../game-model"}
game-events = {path = "../game-events"}
game-core = {path = "../game-core"}
