[package]
name = "game-render"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.14"
macroquad-canvas = "0.4.1"
egui-macroquad = "0.17.3"
log = "0.4"
instant = "0.1.13"
game-model = { path = "../game-model" }
game-events = { path = "../game-events" }
game-core = { path = "../game-core" }
